@@ -1,3 +1,10 @@
+Mon Sep 15 15:22:06 2003  George Lebl <jirka@5z.com>
+
+	* src/mini-commander_applet.c: when started in lockdown mode, hide
+	  the preferences item.  When
+	  /desktop/gnome/lockdown/inhibit_command_line is true, then make
+	  self insensitive since command line is very prohibited here.
+
 Mon Sep 15 14:23:48 2003  George Lebl <jirka@5z.com>
 
 	* src/command_line.c: remove unused var to avoid compiler
